force-app/main/default/objects/tdc_tsw__Answer__c/fields/tdc_tsw__Default__c.field-meta.xml
<CustomField>
    <fullName>tdc_tsw__Default__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Mark this answer as default and send the next question selected.</inlineHelpText>
    <label>Default</label>
    <type>Checkbox</type>
</CustomField>