force-app/main/default/objects/tdc_tsw__Answer__c/fields/tdc_tsw__isLooping__c.field-meta.xml
<CustomField>
    <fullName>tdc_tsw__isLooping__c</fullName>
    <defaultValue>false</defaultValue>
    <label>isLooping</label>
    <type>Checkbox</type>
</CustomField>