force-app/main/default/objects/tdc_tsw__Answer__c/fields/tdc_tsw__Next_Question__c.field-meta.xml
<CustomField>
    <fullName>tdc_tsw__Next_Question__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Select the Next Question that would be sent from the survey when this answer is received.</inlineHelpText>
    <label>Next Question</label>
    <referenceTo>tdc_tsw__Question__c</referenceTo>
    <relationshipLabel>Answers</relationshipLabel>
    <relationshipName>NQAnswers</relationshipName>
    <type>Lookup</type>
</CustomField>