force-app/main/default/objects/tdc_tsw__Answer__c/fields/tdc_tsw__Possible_Answers__c.field-meta.xml
<CustomField>
    <fullName>tdc_tsw__Possible_Answers__c</fullName>
    <inlineHelpText>Enter a set of ‘||’ separated answers eg., Coffee || cofee || coffe etc.</inlineHelpText>
    <label>Possible Answers</label>
    <length>255</length>
    <type>Text</type>
</CustomField>