force-app/main/default/objects/tdc_tsw__Answer__c/fields/tdc_tsw__Question__c.field-meta.xml
<CustomField>
    <fullName>tdc_tsw__Question__c</fullName>
    <label>Question</label>
    <referenceTo>tdc_tsw__Question__c</referenceTo>
    <relationshipLabel>Answers (Question)</relationshipLabel>
    <relationshipName>Answers</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>